<!--
  Copyright (c) 2012 "Mark Katerberg"
  
  
  This file is part of TAP.
  
  TAP is free software: you can redistribute it and/or modify
  it under the terms of the GNU Affero General Public License as
  published by the Free Software Foundation, either version 3 of the
  License, or (at your option) any later version.
  
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU Affero General Public License for more details.
  
  You should have received a copy of the GNU Affero General Public License
  along with this program. If not, see <http://www.gnu.org/licenses/>.
-->
<resources>

    <string name="app_name">TAP</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_launcher">TAP Assisted Pathfinder</string>
    <string name="tab_holder">Tab Holder</string>
    <string name="tab_1">Dice</string>
    <string name="tab_2">Settings</string>
    <string name="d12">D12</string>
    <string name="d4">D4</string>
    <string name="d6">D6</string>
    <string name="d8">D8</string>
    <string name="d10">D10</string>
    <string name="d20">D20</string>
    <string name="d100">d100</string>
    <string name="dPercent">D%</string>
    <string name="repeat">Repeat</string>
    <string name="custom_die_hint">e.g. 4d6+1</string>
    <string name="sound_setting">Sound</string>
    <string name="custon_name_setting">Allow Custom Names</string>
    <string name="no_dice_helper_text">Add dice via menu button</string>
    <string name="add_custom_die">Add custom die</string>
    <string name="number_of_dice">Number of Dice</string>
    <string name="example_modifier_text">e.g. 4 or -6</string>
    <string name="custom_die_modifier_label">Amount to Add</string>
    <string name="custom_die_number_of_sides_label">Number of Sides</string>
    <string name="name_of_roll">Name of this Roll</string>
    
</resources>
