<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/diceDisplayView"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center_horizontal"
        android:text=""
        android:textSize="50sp" />

    <LinearLayout style="@style/DiceLayout" >

        <Button
            android:id="@+id/d4"
            style="@style/DiceButton"
            android:text="@string/d4" />

        <Button
            android:id="@+id/d6"
            style="@style/DiceButton"
            android:text="@string/d6" />
    </LinearLayout>

    <LinearLayout style="@style/DiceLayout" >

        <Button
            android:id="@+id/d8"
            style="@style/DiceButton"
            android:text="@string/d8" />

        <Button
            android:id="@+id/d10"
            style="@style/DiceButton"
            android:text="@string/d10" />
    </LinearLayout>

    <LinearLayout style="@style/DiceLayout" >

        <Button
            android:id="@+id/d12"
            style="@style/DiceButton"
            android:text="@string/d12" />

        <Button
            android:id="@+id/d100"
            style="@style/DiceButton"
            android:text="@string/dPercent" />
    </LinearLayout>

    <LinearLayout style="@style/DiceLayout" >

        <Button
            android:id="@+id/d20"
            style="@style/DiceButton"
            android:text="@string/d20" />
    </LinearLayout>

</LinearLayout>