<!--
  Copyright (c) 2012 "Mark Katerberg"
  
  
  This file is part of TAP.
  
  Katerproject is free software: you can redistribute it and/or modify
  it under the terms of the GNU Affero General Public License as
  published by the Free Software Foundation, either version 3 of the
  License, or (at your option) any later version.
  
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU Affero General Public License for more details.
  
  You should have received a copy of the GNU Affero General Public License
  along with this program. If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/diceDisplayView"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center_horizontal"
        android:text=""
        android:textSize="50sp" />

    <LinearLayout style="@style/DiceLayout" >

        <Button
            android:id="@+id/d4"
            style="@style/DiceButton"
            android:text="@string/d4" />

        <Button
            android:id="@+id/d6"
            style="@style/DiceButton"
            android:text="@string/d6" />
    </LinearLayout>

    <LinearLayout style="@style/DiceLayout" >

        <Button
            android:id="@+id/d8"
            style="@style/DiceButton"
            android:text="@string/d8" />

        <Button
            android:id="@+id/d10"
            style="@style/DiceButton"
            android:text="@string/d10" />
    </LinearLayout>

    <LinearLayout style="@style/DiceLayout" >

        <Button
            android:id="@+id/d12"
            style="@style/DiceButton"
            android:text="@string/d12" />

        <Button
            android:id="@+id/d100"
            style="@style/DiceButton"
            android:text="@string/dPercent" />
    </LinearLayout>

    <LinearLayout style="@style/DiceLayout" >

        <Button
            android:id="@+id/d20"
            style="@style/DiceButton"
            android:text="@string/d20" />
    </LinearLayout>

</LinearLayout>
