<!--
  Copyright (c) 2012 "Mark Katerberg"
  
  
  This file is part of TAP.
  
  TAP is free software: you can redistribute it and/or modify
  it under the terms of the GNU Affero General Public License as
  published by the Free Software Foundation, either version 3 of the
  License, or (at your option) any later version.
  
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU Affero General Public License for more details.
  
  You should have received a copy of the GNU Affero General Public License
  along with this program. If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        style="@style/CustomDiceLayout"
         >

        <TextView
			style="@style/CustomDieLabel"
            android:text="@string/name_of_roll" />

        <EditText
            android:id="@+id/customNameOfDie"
            style="@style/CustomDieEdit" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    
    <LinearLayout
        style="@style/CustomDiceLayout"
         >

        <TextView
			style="@style/CustomDieLabel"
            android:text="@string/number_of_dice" />

        <EditText
            android:id="@+id/customNumberOfDice"
            style="@style/CustomDieEdit" >

        </EditText>
    </LinearLayout>

    <LinearLayout
        style="@style/CustomDiceLayout" >

        <TextView
            style="@style/CustomDieLabel"
            android:text="@string/custom_die_number_of_sides_label" />

        <EditText
            android:id="@+id/customDieType"
            style="@style/CustomDieEdit" >
        </EditText>
    </LinearLayout>

    <LinearLayout
       style="@style/CustomDiceLayout" >

        <TextView
            style="@style/CustomDieLabel"
            android:text="@string/custom_die_modifier_label" />

        <EditText
            android:id="@+id/customModifier"
            style="@style/CustomDieEdit"
            android:hint="@string/example_modifier_text" >
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/acceptCustomDie"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/add_custom_die" >
    </Button>

</LinearLayout>